--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -11,3 +10,5 @@
 # IDE
 /.vscode/
 /.idea/
+# Local setup
+/docker/
