--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,11 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\AppAuthAuthenticator
+            entry_point: form_login
+            form_login:
+                login_path: app_login
+                check_path: app_login_check
+                default_target_path: 'list_main'
             logout:
                 path: app_logout
                 target: app_login
